--- a/files/index2summary.html
+++ b/files/index2summary.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="text-container">
-    <p><b>Краткая суммаризация</b></p>
+    <p><b>Краткая аннотация</b></p>
     Законопроект вносит изменения в регулирование синдицированных кредитов. Закрепляется статус внешнего участника — третьего лица, финансирующего кредитора. Уточняются условия перехода прав и обязанностей от участника синдиката к внешнему участнику, включая случаи банкротства, ликвидации и уступки прав. Расширен перечень связанных соглашений, допускается заключение межкредиторских соглашений между внешними участниками
   </div>
 </body>
