--- a/files/index3summary.html
+++ b/files/index3summary.html
@@ -86,7 +86,7 @@
   </div>
 
   <div class="text-container">
-    <p><b>Детальная суммаризация</b></p>
+    <p><b>Детальная аннотация</b></p>
     Документ представляет собой проект федерального закона, направленный на внесение изменений в статьи 81 и 351 Трудового кодекса Российской Федерации. Цель законопроекта заключается в защите трудовых прав работников, проходивших военную службу по мобилизации или контрактной службе, путем продления срока приостановления действия трудового договора на период временной нетрудоспособности сотрудника после завершения службы. Это позволяет избежать увольнения работника по инициативе работодателя вследствие отсутствия на рабочем месте по причине болезни после демобилизации. Законопроект предусматривает сохранение трудовых отношений и возможность восстановления на работе после выздоровления работника. Документ включает пояснительную записку, финансово-экономическое обоснование, перечень необходимых изменений в законодательстве и распоряжение правительства о представителе, ответственном за прохождение законопроекта через парламентские процедуры. Реализация предлагаемых изменений не потребует внесения поправок в действующие федеральные законы и нормативные правовые акты, а также не повлияет негативно на государственные программы и бюджет страны
   </div>
 </body>
