--- a/files/compare_summary1.html
+++ b/files/compare_summary1.html
@@ -90,7 +90,7 @@
   </div>
 
   <div class="text-container">
-    <p><b>Краткая суммаризация изменении</b></p>
+    <p><b>Краткая аннотация к изменениям</b></p>
     Новая редакция нормативного акта включает уточнения относительно порядка взаимодействия участников синдиката кредиторов и внешних инвесторов, предоставляющих финансирование. Введены новые положения, регулирующие передачу прав и обязанностей между участниками синдиката и финансовыми организациями, определены сроки и условия финансирования, обязанности внешнего инвестора по своевременной передаче денежных средств в оговоренных случаях. Упразднены устаревшие нормы, касающиеся управления залогом и обязательств участников синдикатов, заменённые новыми требованиями к обязательствам внешних участников. Исключены дублирующиеся положения и определён порядок действий при наступлении кризисных ситуаций, таких как банкротство или отзыв банковской лицензии. В предыдущей версии основная дата была неизвестна, в новой версии это дата: по истечении десяти дней после дня его официального опубликования
   </div>
 </body>
