--- a/files/compare_summary2.html
+++ b/files/compare_summary2.html
@@ -93,7 +93,7 @@
     <!-- Right Column: PDF3 -->
     <div class="pdf-container">
       <iframe class="pdf-frame1" src="html/changes_summ_detal.pdf#toolbar=0" title="WPS офис"></iframe>
-      <div class="caption">Детальная суммаризация</div>
+      <div class="caption">Детальная аннотация к изменениям</div>
     </div>
   </div>
 
