--- a/files/index_pdf.html
+++ b/files/index_pdf.html
@@ -62,7 +62,7 @@
     </div>
     <div class="pdf-container">
       <iframe class="pdf-frame" src="html/pdf2.pdf#toolbar=0" title="TrackTrack"></iframe>
-      <div class="caption">Распознанный DOCX</div>
+      <div class="caption">Распознанный DOCX (TrackTrack)</div>
     </div>
     <!-- <div class="pdf-container"></div>
       <iframe class="pdf-frame" src="html/pdf3.pdf#toolbar=0" title="WPS офис"></iframe>
